Исправление ошибок в html

--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
                 </div>
                 <div class="text__input">
                     <p class="name">Name</p>
-                    <input type="text" required name="name" id="name client" class="text__box">
+                    <input type="text" required name="name" id="name_client" class="text__box">
                     <p class="email">Email Address</p>
-                    <input type="text" required name="email" id="email client" class="text__box">
+                    <input type="text" required name="email" id="email_client" class="text__box">
                     <button class="btn__poisk"> </button>
                 </div>
             </div>
@@ -170,7 +170,7 @@
                     <img src="assets/img/image9.png" alt="">
                     <div class="travel__gory">
                         <p class="text">Travel spots in Iceland</p>
-                        <h7 class="text1">Delectus sint nisi ut recusandae molestiae. Qui iure accusantium esse <br/> temporibus et. Aut atque vel labore officiis a dolor et. Molestiae dolor quo <br/> eius. Perferendis error eveniet sit quia occaecati excepturi nisi prod.</h7>
+                        <h5 class="text1">Delectus sint nisi ut recusandae molestiae. Qui iure accusantium esse <br/> temporibus et. Aut atque vel labore officiis a dolor et. Molestiae dolor quo <br/> eius. Perferendis error eveniet sit quia occaecati excepturi nisi prod.</h5>
                         <p class="data__text">November 24, 2021</p>
                     </div>
                 </div>
@@ -178,25 +178,25 @@
                     <img src="assets/img/image10.png" alt="">
                     <div class="travel__gory">
                         <p class="text">Climbing as exercise</p>
-                        <h7 class="text1">Consequuntur voluptas quis dicta expedita in minus velit impedit deserunt. <br/> Quasi sit similique nemo praesentium excepturi commodi suscipit placeat. <br/> Incidunt libero necessitatibus. Commodi modi placeat. Sit et delenit.</h7>
+                        <h5 class="text1">Consequuntur voluptas quis dicta expedita in minus velit impedit deserunt. <br/> Quasi sit similique nemo praesentium excepturi commodi suscipit placeat. <br/> Incidunt libero necessitatibus. Commodi modi placeat. Sit et delenit.</h5>
                         <p class="data__text">November 24, 2021</p>
                     </div>
                 </div>
                 <div class="travel__gory1">
                     <p class="text">Meditation apps I use</p>
-                    <h7 class="text1">Sit quis quaerat expedita aut sed error facilis odit similique. Saepe culpa aut fuga aut esse quaerat. Vero <br/> vero facere perferendis d</h7>
+                    <h5 class="text1">Sit quis quaerat expedita aut sed error facilis odit similique. Saepe culpa aut fuga aut esse quaerat. Vero <br/> vero facere perferendis d</h5>
                     <p class="data__text">November 24, 2021</p>
                 </div>
                 <div class="travel__gory1">
                     <p class="text">How much stuff do you actually need?</p>
-                    <h7 class="text1">Veritatis perspiciatis est dolores adipisci ut sed. Culpa eligendi sunt cupiditate aut est. Recusandae <br/> pariatur qui quo animi exercitationem sint voluptas tenetur ut. Nihil</h7>
+                    <h5 class="text1">Veritatis perspiciatis est dolores adipisci ut sed. Culpa eligendi sunt cupiditate aut est. Recusandae <br/> pariatur qui quo animi exercitationem sint voluptas tenetur ut. Nihil</h5>
                     <p class="data__text">November 24, 2021</p>
                 </div>
                 <div class="img__text__foto">
                     <img src="assets/img/image11.png" alt="">
                     <div class="travel__gory">
                         <p class="text">The move to mirrorless cameras</p>
-                        <h7 class="text1">Maxime quisquam non in et iusto voluptates. Minima et deleniti laboriosam. <br/> Qui deleniti quas ex expedita hic facere commodi esse veniam.</h7>
+                        <h5 class="text1">Maxime quisquam non in et iusto voluptates. Minima et deleniti laboriosam. <br/> Qui deleniti quas ex expedita hic facere commodi esse veniam.</h5>
                         <p class="data__text1">November 24, 2021</p>
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                     <img src="assets/img/image12.png" alt="">
                     <div class="travel__gory">
                         <p class="text">Drone photography on a space budget</p>
-                        <h7 class="text1">Aut quia voluptatem rem assumenda dolorem eos nostrum. Voluptatem <br/> facere ipsum aut maxime ab. Ea et voluptatum maiores odit voluptatib</h7>
+                        <h5 class="text1">Aut quia voluptatem rem assumenda dolorem eos nostrum. Voluptatem <br/> facere ipsum aut maxime ab. Ea et voluptatum maiores odit voluptatib</h5>
                         <p class="data__text1">November 24, 2021</p>
                     </div>
                 </div>
@@ -212,58 +212,58 @@
                     <img src="assets/img/image13.png" alt="">
                     <div class="travel__gory">
                         <p class="text">How to make the perfect cup of coffee</p>
-                        <h7 class="text1">Aut nihil suscipit voluptas libero deleniti similique maxime. Ea rerum illo <br/> assumenda delectus ipsum dolores nam. Reiciendis</h7>
+                        <h5 class="text1">Aut nihil suscipit voluptas libero deleniti similique maxime. Ea rerum illo <br/> assumenda delectus ipsum dolores nam. Reiciendis</h5>
                         <p class="data__text1">November 24, 2021</p>
                     </div>
                 </div>
                 <div class="travel__gory1">
                     <p class="text">Decision fatigue & minimalism</p>
-                    <h7 class="text1">Accusamus nihil qui iste consequatur iste labore maiores nobis natus. Maiores harum accusantium. Hic sunt aut <br/> vel et hic. Et quas necessitatibus. Iusto est sit. Rerum id ut. Id dolore voluptatem eum perferendis vitae.</h7>
+                    <h5 class="text1">Accusamus nihil qui iste consequatur iste labore maiores nobis natus. Maiores harum accusantium. Hic sunt aut <br/> vel et hic. Et quas necessitatibus. Iusto est sit. Rerum id ut. Id dolore voluptatem eum perferendis vitae.</h5>
                     <p class="data__text">November 24, 2021</p>
                 </div>
                 <div class="travel__gory1">
                     <p class="text">Minimal interior design</p>
-                    <h7 class="text1">Aliquam quae nemo amet quia quae perferendis earum. Laboremolestiae quis doloremque. At <br/> perferendis pariatur minima rerum delectus. Hic cum eum voluptas.</h7>
+                    <h5 class="text1">Aliquam quae nemo amet quia quae perferendis earum. Laboremolestiae quis doloremque. At <br/> perferendis pariatur minima rerum delectus. Hic cum eum voluptas.</h5>
                     <p class="data__text">November 24, 2021</p>
                 </div>
                 <div class="img__text__gory1">
                     <img src="assets/img/image14.png" alt="">
                     <div class="travel__gory">
                         <p class="text">The best pen I've ever used</p>
-                        <h7 class="text1">Mollitia voluptatum cum consequatur possimus ut veritatis quod non sint. <br/> Voluptatibus fuga ut magnam culpa quasi. Odio commodi modi vero dolore. <br/> Esse aut et distinctio. Voluptatem corrupti quasi. Ut omnis reprehenderi</h7>
+                        <h5 class="text1">Mollitia voluptatum cum consequatur possimus ut veritatis quod non sint. <br/> Voluptatibus fuga ut magnam culpa quasi. Odio commodi modi vero dolore. <br/> Esse aut et distinctio. Voluptatem corrupti quasi. Ut omnis reprehenderi</h5>
                         <p class="data__text3">November 24, 2021</p>
                     </div>
                 </div>
                 <div class="travel__gory1">
                     <p class="text">Best travel tripods</p>
-                    <h7 class="text2">Sequi asperiores culpa nihil. Qui placeat ut eos molestiae arc</h7>
+                    <h5 class="text2">Sequi asperiores culpa nihil. Qui placeat ut eos molestiae arc</h5>
                     <p class="data__text">November 24, 2021</p>
                 </div>
                 <div class="travel__gory1">
                     <p class="text">EDC must-haves</p>
-                    <h7 class="text1">Nisi ad perferendis quia modi a. Magni ut aut voluptatum. Dolorem vero molestiae itaque. <br/> Qui itaque itaque. Nihil autem perspiciatis sed similique dolor excepturi harum. Perspiciatis suscipit unde aliq</h7>
+                    <h5 class="text1">Nisi ad perferendis quia modi a. Magni ut aut voluptatum. Dolorem vero molestiae itaque. <br/> Qui itaque itaque. Nihil autem perspiciatis sed similique dolor excepturi harum. Perspiciatis suscipit unde aliq</h5>
                     <p class="data__text">November 24, 2021</p>
                 </div>
                 <div class="travel__gory1">
                     <p class="text">Journals & how to use them</p>
-                    <h7 class="text2">Assumenda aut eos et consequatur sint vitae fugit. Nulla voluptatibus et voluptatum sed.</h7>
+                    <h5 class="text2">Assumenda aut eos et consequatur sint vitae fugit. Nulla voluptatibus et voluptatum sed.</h5>
                     <p class="data__text">November 24, 2021</p>
                 </div>
                 <div class="travel__gory1">
                     <p class="text">Minimalism in the workplace?</p>
-                    <h7 class="text1">Nostrum quia sapiente natus consequatur. Dicta debitis aut minus consectetur est officiis aut. Atque <br/> itaque quia asperiores odit in tempore nisi qui. Sit ut aut ipsa v</h7>
+                    <h5 class="text1">Nostrum quia sapiente natus consequatur. Dicta debitis aut minus consectetur est officiis aut. Atque <br/> itaque quia asperiores odit in tempore nisi qui. Sit ut aut ipsa v</h5>
                     <p class="data__text">November 24, 2021</p>
                 </div>
                 <div class="travel__gory1">
                     <p class="text">How I structure my work</p>
-                    <h7 class="text1">Inventore alias consequatur accusantium ut explicabo aut. Et fuga voluptatem est reiciendis officia qui qui. <br/> Dolorem est sequi numquam ratione cum sequi porro. Sint debitis delectus nihil placeat dolor non laborum iusto</h7>
+                    <h5 class="text1">Inventore alias consequatur accusantium ut explicabo aut. Et fuga voluptatem est reiciendis officia qui qui. <br/> Dolorem est sequi numquam ratione cum sequi porro. Sint debitis delectus nihil placeat dolor non laborum iusto</h5>
                     <p class="data__text">November 24, 2021</p>
                 </div>
                 <div class="img__text__gory1">
                     <img src="assets/img/image15.png" alt="">
                     <div class="travel__gory">
                         <p class="text2">Tech-focused travel backpack</p>
-                        <h7 class="text1">Delectus et iusto perspiciatis impedit dolor eligendi sit. Voluptatem <br/> excepturi temporibus fugit molestiae. Nesciunt sequi molestiae. Molestiae <br/> recusandae sed esse illo nobis. Qui aut porro id. Tempore sed</h7>
+                        <h5 class="text1">Delectus et iusto perspiciatis impedit dolor eligendi sit. Voluptatem <br/> excepturi temporibus fugit molestiae. Nesciunt sequi molestiae. Molestiae <br/> recusandae sed esse illo nobis. Qui aut porro id. Tempore sed</h5>
                         <p class="data__text3">November 24, 2021</p>
                     </div>
                 </div>
